--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,27 +1,25 @@
-<h1>New Payment</h1>
+<%= form_with(model: @payment, local: true) do |form| %>
+  <% if @payment.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@payment.errors.count, "error") %> prohibited this @payment from being saved:</h2>
 
-<% payment_info = params[:payment_info] %>
+      <ul>
+      <% @payment.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-<%= form_with url: payments_path do |form| %>
-  <article>
-    <% if flash[:error].present? %>
-      <div id="error_explanation">
-        <p><%= flash[:error] %></p>
-      </div>
-    <% end %>
-    <label class="amount">
-      <span>Amount: <%= number_to_currency(payment_info[:amount].to_i / 100) %></span>
-    </label>
-    <% form.hidden_field :payment_info, value: payment_info %>
-  </article>
+  <div>
+    <%= form.text_field :amount, id: :payment_amount, placeholder: 'amount' %>
+  </div>
 
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="<%= payment_info[:description] %>"
-          data-amount="<%= payment_info[:amount] %>"
-          data-locale="auto">
-  </script>
+  <div>
+    <%= form.text_field :description, id: :payment_description, placeholder: 'description' %>
+  </div>
+
+  <div>
+    <%= form.submit %>
+  </div>
 <% end %>
-
-<%#= params[:description] %>
-<%#= params[:amount] %>
