--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,2 +1,10 @@
 <h1>Contact TakesAVillage</h1>
 
+<%= form_for :contact do |f| %>
+    <p>
+        <%= f.label :message %><br/>
+        <%= f.text_area :message %>
+    </p>
+
+    <%= f.submit 'Contact Us', class: 'button btn-medium' %>
+<% end %>
