Update CSS, formatting, layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
     
     --color-font-main: #222222;
     --color-font-inverse: #EEEEEE;
-    --color-font-caption: #A0A0A0;
+    --color-font-caption: #505050;
     --color-bg-main: #EEEEEE;
     --color-bg-alt: #FAFAFA;
     --color-highlight-main: #07796B;
@@ -74,6 +74,7 @@ body {
     color: var(--color-font-inverse);
     justify-content: space-between;
     align-items: center;
+    box-shadow: var(--shadow-material);
 
     .navitem {
         display: flex;
@@ -132,7 +133,37 @@ body {
 
 }
 
+.grid-content {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: repeat( auto-fit, minmax(300px, 45vw));
+    grid-template-areas:
+     "section-1"
+     "section-2"
+     "section-3"
+     "section-4"
+     "section-5"
+}
 
+.section-1 {
+    grid-area: section-1;
+}
+.section-2 {
+    grid-area: section-2;
+}
+.section-3 {
+    grid-area: section-3;
+}
+.section-4 {
+    grid-area: section-4;
+}
+.section-5 {
+    grid-area: section-5;
+}
+
+.text-section {
+    text-align: left;
+}
 
 // Attempting to cover the ugly blur artifacts. No success
 // .coverleft {
@@ -150,9 +181,6 @@ body {
 //     right: 0px;
 // }
 
-input {
-    font-family: var(--font-main);
-}
 
 logofont {
     font-family: var(--font-display);
@@ -185,8 +213,8 @@ herofont {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
-
+        
+        
         float: left;
         position: absolute;
         width: 100%;
@@ -195,13 +223,13 @@ herofont {
         margin-left: -50vw;
         top: 130px;
         z-index: 0;
-
+        
         padding: 5px;
         color: #FFFFFF;
         font-weight: bold;
         
         background-color: rgba(0, 0, 0, 0.2);
-
+        
         -webkit-backdrop-filter: blur(10px);
         -moz-backdrop-filter: blur(10px);
         -o-backdrop-filter: blur(10px);
@@ -243,10 +271,10 @@ caption {
 
 a {
     &:link {
-    color: var(--color-highlight-main);
-    text-decoration: none;
-    transition: 0.2s;
-    font-weight: normal;
+        color: var(--color-highlight-main);
+        text-decoration: none;
+        transition: 0.2s;
+        font-weight: normal;
     }
     &:visited {
         color: var(--color-highlight-main);
@@ -262,7 +290,7 @@ a {
     // justify-content: flex-start;
     width: 100%;
     padding: 16px;
-
+    
     border-radius: 10px;
     background-color: var(--color-bg-alt);
     text-align: left;
@@ -272,6 +300,49 @@ a {
 .half {
     width: 100%;
     max-width: 450px;
+}
+
+input {
+    font-family: var(--font-main);
+    font-weight: 100;
+
+    &[type="submit"] {
+        min-width: 120px;
+        background-color: var(--color-highlight-main);
+        color: var(--color-font-inverse);
+        transition: 0.2s;
+    
+        padding: 12px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        
+        box-shadow: var(--shadow-material);
+    
+        &:hover {
+            background-color: var(--color-highlight-warning);
+        }
+    }
+
+    &[type="text"] {
+        height: 38px; 
+        padding: 5px 10px;
+    }
+    
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: var(--color-font-caption);
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: var(--color-font-caption);
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: var(--color-font-caption);
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: var(--color-font-caption);
 }
 
 form {
@@ -290,40 +361,20 @@ form {
     box-shadow: var(--shadow-warning);
 }
 
-.warning {
-    // position: absolute;
-    // top: 10px;
-    // width: 280px;
-    // left: 50%;
-    // margin-left: -140px;
+.warning, .notice {
     width: 110vw;
     height: 25px;
     padding: 1px;
     background-color: var(--color-highlight-warning-light);
     border: 2px solid black;
-    // border-radius: 10px;
     z-index: 1;
     box-shadow: var(--shadow-material);
     box-shadow: var(--shadow-outline);
 }
 
 .notice {
-    // position: absolute;
-    // top: 10px;
-    // width: 280px;
-    // left: 50%;
-    // margin-left: -140px;
-    width: 110vw;
-    height: 25px;
-    padding: 1px;
     background-color: var(--color-highlight-notice-light);
-    border: 2px solid black;
-    // border-radius: 10px;
-    z-index: 1;
-    box-shadow: var(--shadow-material);
-    box-shadow: var(--shadow-outline);
 }
-
 
 
 textarea, input, select {
@@ -340,6 +391,8 @@ textarea, input, select {
     background-color: var(--color-bg-alt);
     color: var(--color-font-main);
     box-shadow: var(--shadow-material);
+
+    
 }
 
 // Main button
@@ -363,7 +416,7 @@ textarea, input, select {
         background-color: var(--color-highlight-warning);
     }
     &.btn-small {
-        width: 80px;
+        width: 100px;
     }
     &.btn-medium {
         width: 150px;
@@ -382,25 +435,6 @@ textarea, input, select {
         &:visited {
             color: var(--color-font-inverse);
         }
-    }
-}
-
-input[type="submit"] {
-    min-width: 120px;
-    background-color: var(--color-highlight-main);
-    color: var(--color-font-inverse);
-    transition: 0.2s;
-
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    
-    box-shadow: var(--shadow-material);
-
-    &:hover {
-        background-color: var(--color-highlight-warning);
     }
 }
 
@@ -423,6 +457,26 @@ input[type="submit"] {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.searchbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+
+    min-width: 300px;
+    max-width: 800px;
+    margin: 10px;
+
+    .btn-search {
+        min-width: 40px;
+        height: 40px; 
+        overflow: hidden;
+        margin-left: 20px;
+        padding: 5px;
+        font-size: 20px;
+    }
 }
 
 .inputfield {
@@ -465,12 +519,13 @@ input[type="submit"] {
     }
 }
 
-.event-container {
+.flex-wrap-row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 
     justify-content: space-around;
+    min-width: 300px;
 }
 
 .event-card {
@@ -530,5 +585,16 @@ input[type="submit"] {
     herofont {
         font-size: 32px;
     }
-    
+
+    .grid-content {
+        display: grid;
+        grid-row-gap: 2vw;
+        grid-column-gap: 5vw;
+        grid-template-areas:
+         "section-1 section-2"
+         "section-3 section-4"
+         "section-5 section-5"
+        
+    }
+
 }
