--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Pacifico" rel="stylesheet">
-
+    <link href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" rel="stylesheet" crossorigin="anonymous">
 
   </head>
 
@@ -19,13 +19,16 @@
       </div>
       <div class="main">
         <div class="content">
+
           <% if flash[:warning] %>
             <div class="warning"><%= flash[:warning] %></div>
           <% end %>
           <% if flash[:notice] %>
             <div class="notice"><%= flash[:notice] %></div>
           <% end %>
+
           <%= yield %>
+
           <div class="footer">
               <h3>A call for your support:</h3>
               At TakesAVillage believe in the power of community involvement and grassroots participation. As such, many of the workshops listed here are free of charge, for teachers and attendees. Keeping a site like this online has it's costs, and we'd really appreciate any donations you can afford to help us keep the site running. Thankyou!
@@ -33,6 +36,7 @@
                 <%= button_to 'Donate Now', new_payment_path, class: 'button btn-small', method: :get %>  <%= button_to 'Contact Us', contact_path, class: 'button btn-small', method: :get %>
               </div>
           </div>
+          
         </div>
       </div>
     </div>
