--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,23 +1,60 @@
-<h1>(search box here)</h1>
+<%= render 'partials/search_bar' %>
 
-<% if policy(@profile).update? %>
-        <div>
-            <a href="<%= edit_profile_path %>"><div class='button btn-small'>Edit Profile</div></a> 
-            <a href="<%= destroy_user_session_path %>", data-method="DELETE" ><div class='button btn-small'>Sign Out</div></a>
+<div class="grid-content">
+
+    <div class="grid-section section-1">
+        
+        <% if policy(@profile).update? %>
+                <div class="flex-wrap-row">
+                    <a href="<%= edit_profile_path %>"><div class='button btn-medium'>Edit Profile</div></a> 
+                </div>
+                <p></p>
+        <% end %>
+    
+        <%= image_tag @profile.avatar_display(:small), class: 'round border maxmobile' %><br/>
+    
+        <h1><%= @profile.full_name %></h1>
+        <h4><%= @profile.tagline %></h4>
+    </div>
+
+    <div class="grid-section section-2">
+        <div class="card">
+        <% if @profile.website %>
+            <strong>Website:</strong> <%= link_to @profile.website %><br/>
+        <% end %>
+        <% if @profile.email_show %>
+            <strong>Email:</strong> <%= mail_to @profile.user.email %>
+        <% end %>
         </div>
-        <p></p>
-<% end %>
+    
+        <p><%= @profile.bio %></p>
+    </div>
 
-<%= image_tag @profile.avatar_display(:small), class: 'round border maxmobile' %><br/>
 
-<h1><%= @profile.full_name %></h1>
-<h4><%= @profile.tagline %></h4>
-<p><%= @profile.bio %></p>
-<div class="card half">
-<% if @profile.website %>
-    <strong>Website:</strong> <%= link_to @profile.website %><br/>
-<% end %>
-<% if @profile.email_show %>
-    <strong>Email:</strong> <%= mail_to @profile.user.email %>
-<% end %>
+    <div class="grid-section section-5">
+        <div class="events-current">
+            <h1><%= @profile.first_name %> is teaching:</h1>
+
+            <% if @events_current %>
+            <%= render 'partials/event_index', events: @events_current %>
+            <% else %>
+            They aren't teaching any workshops!
+            <% end %>
+        </div>
+    
+        <div class="events-past">
+            <h1><%= @profile.first_name %> has taught:</h1>
+
+            <% if @events_current %>
+            <%= render 'partials/event_index', events: @events_past %>
+            <% else %>
+            They haven't taught any workshops!
+            <% end %>
+        </div>
+    </div>
+
+    <div class="grid-section section-3"></div>
+    <div class="grid-section section-4"></div>
+
+
 </div>
