Update styles, layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico|Roboto|Roboto+Slab" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" rel="stylesheet" crossorigin="anonymous">
 
   </head>
@@ -31,7 +31,7 @@
 
           <div class="footer">
               <h3>A call for your support:</h3>
-              At TakesAVillage believe in the power of community involvement and grassroots participation. As such, many of the workshops listed here are free of charge, for teachers and attendees. Keeping a site like this online has it's costs, and we'd really appreciate any donations you can afford to help us keep the site running. Thankyou!
+              TakesAVillage operates on the kind donations of it's users. Willing to help us out?
               <div class="foot-buttons">
                 <%= button_to 'Donate Now', new_payment_path, class: 'button btn-small', method: :get %>  <%= button_to 'Contact Us', contact_path, class: 'button btn-small', method: :get %>
               </div>
