--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,3 +1,9 @@
+<h1>Make a Donation?</h1>
+
+<p>
+  At TakesAVillage believe in the power of community involvement and grassroots participation. As such, many of the workshops listed here are free of charge, for teachers and attendees. Keeping a site like this online has it's costs, and we'd really appreciate any donations you can afford to help us keep the site running. Thankyou!
+</p> 
+
 <%= form_with(model: @payment, local: true) do |form| %>
   <% if @payment.errors.any? %>
     <div id="error_explanation">
