--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@
     --color-highlight-notice: #1F5673; 
     --color-highlight-notice-light: #6699CC;
 
-    --font-main: 'Roboto', sans-serif;
+    --font-main: 'Open Sans', sans-serif;
     --font-serif: 'Roboto Slab', serif;
     --font-display: 'Pacifico', serif;
 
@@ -134,9 +134,10 @@ body {
 }
 
 .grid-content {
+    width: 100%;
     display: grid;
     grid-gap: 1em;
-    grid-template-columns: repeat( auto-fit, minmax(300px, 45vw));
+    grid-template-columns: 100%;
     grid-template-areas:
      "section-1"
      "section-2"
@@ -163,6 +164,14 @@ body {
 
 .text-section {
     text-align: left;
+    padding: 0 16px;
+}
+
+.map {
+    width: 100%;
+    img {
+        max-width: 100%;
+    }
 }
 
 // Attempting to cover the ugly blur artifacts. No success
@@ -258,7 +267,7 @@ h3 {
 
 h4 {
     font-family: var(--font-main);
-    font-weight: bolder;
+    font-weight: bold;
     font-size: 14px;
 }
 
@@ -274,7 +283,7 @@ a {
         color: var(--color-highlight-main);
         text-decoration: none;
         transition: 0.2s;
-        font-weight: normal;
+        font-weight: bold;
     }
     &:visited {
         color: var(--color-highlight-main);
@@ -295,6 +304,25 @@ a {
     background-color: var(--color-bg-alt);
     text-align: left;
     box-shadow: var(--shadow-material);
+}
+
+.details {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    h1, h2 {
+        margin: 0;
+    }
+}
+
+.card-left {
+    width: 100px;
+}
+
+.card-right {
+    flex-grow: 1;
 }
 
 .half {
@@ -330,6 +358,14 @@ input {
         padding: 5px 10px;
     }
     
+}
+
+.textarea {
+    padding: 10px;
+    outline: none;
+    resize: none;
+    overflow: auto;
+    font-family: var(--font-main);
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
@@ -419,10 +455,11 @@ textarea, input, select {
         width: 100px;
     }
     &.btn-medium {
-        width: 150px;
+        width: 75%;
+        min-width: 180px;
     }
     &.btn-large {
-        min-width: 300px;
+        min-width: 280px;
      }
     &.btn-wide {
         min-width: 100%;
@@ -465,7 +502,7 @@ textarea, input, select {
     align-items: center;
     justify-content: flex-end;
 
-    min-width: 300px;
+    min-width: 280px;
     max-width: 800px;
     margin: 10px;
 
@@ -525,7 +562,7 @@ textarea, input, select {
     flex-wrap: wrap;
 
     justify-content: space-around;
-    min-width: 300px;
+    min-width: 250px;
 }
 
 .event-card {
@@ -589,7 +626,8 @@ textarea, input, select {
     .grid-content {
         display: grid;
         grid-row-gap: 2vw;
-        grid-column-gap: 5vw;
+        grid-column-gap: 2.5%;
+        grid-template-columns: 47.5%;
         grid-template-areas:
          "section-1 section-2"
          "section-3 section-4"
