--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,13 +16,23 @@
             <p></p>
         <% end %>
 
-        <div class="card eventdetails">
-            <strong>Price:</strong> <%= @event.price > 0 ? dollars(@event.price) : "Free!" %><br/>
-            <strong>When:</strong> <%= @event.start_date %>, <%= @event.event_time %><br/>
-            <strong>Duration:</strong> <%= distance_of_time_in_words(@event.duration).gsub('about ','')  %><br/>
-            <strong>Where:</strong> <%= @event.street %><br/>
-                                    <%= @event.suburb %> <%= @event.state %><br/>
-            <strong>Taught by:</strong> <%= link_to @event.owner.profile.full_name, profile_path(@event.owner.profile) %><br/>
+        <div class="card event details">
+            <div class="card-left">
+                <strong>Price:</strong> <br/>
+                <strong>When:</strong> <br/>
+                <strong>How long?</strong> <br/>
+                <strong>Where:</strong> <br/>
+                <br/>
+                <strong>Taught by:</strong>
+            </div>
+            <div class="card-right">
+                <%= @event.price > 0 ? dollars(@event.price) : "Free!" %><br/>
+                <%= @event.event_time %><br/>
+                <%= distance_of_time_in_words(@event.duration).gsub('about ','')  %><br/>
+                <%= @event.street.titleize %><br/>
+                <%= @event.suburb.titleize  %> <%= @event.state.titleize  %><br/>
+                <%= link_to @event.owner.profile.full_name, profile_path(@event.owner.profile) %>
+            </div>
         </div><br/>
 
         <%= attendance_button(@event) %>
@@ -50,16 +60,16 @@
         <h1>
             Who's teaching this?
         </h1>
-        <div class="card teacherdetails">
-            <div class="cardleft">
+        <div class="card teacher details">
+            <div class="card-left">
                 <%= image_tag @event.owner.profile.avatar_display(:thumb), class: 'round border maxmobile' %>
             </div>
-            <div class="cardright">
-                <h1>
+            <div class="card-right">
+                <h2>
                     <%= @event.owner.profile.full_name %>
-                </h1>
+                </h2>
                 <strong><%= @event.owner.profile.tagline %></strong><br/>
-                <%= "#{@event.owner.profile.suburb}, " if @event.owner.profile.suburb %><%= @event.owner.profile.country_code if @event.owner.profile.country_code %>
+                <%= "#{@event.owner.profile.suburb.titleize}, " if @event.owner.profile.suburb %><%= @event.owner.profile.country_code if @event.owner.profile.country_code %>
             </div>
         </div>
 
