Update CSS, fix ugliness

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="grid-content">
 
-    <div class="grid-section section-1">
+    <div class="grid-section section-1 profile-header">
     
         <%= image_tag @profile.avatar_display(:small), class: 'round border maxmobile' %><br/>
     
