--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,22 +174,32 @@ body {
     }
 }
 
-// Attempting to cover the ugly blur artifacts. No success
-// .coverleft {
-//     background-color: var(--color-bg-main);
-//     width: 15px;
-//     height: 100%;
-//     position: absolute;
-//     left: 0px;
-// }
-// .coverright {
-//     background-color: var(--color-bg-main);
-//     width: 15px;
-//     height: 100%;
-//     position: absolute;
-//     right: 0px;
-// }
+.profile-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 
+    h1 {
+        margin: 0;
+    }
+    h4 {
+        margin: 0;
+    }
+}
+
+.attendee {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    img {
+        margin: 0px 10px;
+        width: 40px;
+        height: 40px;
+    }
+}
 
 logofont {
     font-family: var(--font-display);
