--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -62,11 +62,11 @@
         </h1>
         <div class="card teacher details">
             <div class="card-left">
-                <%= image_tag @event.owner.profile.avatar_display(:thumb), class: 'round border maxmobile' %>
+                <%= link_to (image_tag @event.owner.profile.avatar_display(:thumb), class: 'round border maxmobile'), profile_path(@event.owner.profile) %>
             </div>
             <div class="card-right">
                 <h2>
-                    <%= @event.owner.profile.full_name %>
+                    <%= link_to (@event.owner.profile.full_name), profile_path(@event.owner.profile) %>
                 </h2>
                 <strong><%= @event.owner.profile.tagline %></strong><br/>
                 <%= "#{@event.owner.profile.suburb.titleize}, " if @event.owner.profile.suburb %><%= @event.owner.profile.country_code if @event.owner.profile.country_code %>
@@ -83,8 +83,8 @@
                 </h1>
             </div> 
             <div class="eventdetails">
-            <strong>City:</strong> <%= @event.suburb %>, <%= @event.country_code %><br/>
-            <strong>Address:</strong> <%= @event.street %><br/>
+            <strong>City:</strong> <%= @event.suburb.titleize %>, <%= @event.country_code %><br/>
+            <strong>Address:</strong> <%= @event.street.titleize %><br/>
             <% if @event.location_details %>
                 <strong>Details:</strong> <%= @event.location_details %><br/>
             <% end %>
@@ -101,7 +101,10 @@
         <div class="card">
             <% if @event.users_attending %>
                 <% @event.users_attending.each do |user| %>
-                    <%= user.profile.full_name %><br/>
+                    <div class="attendee">
+                        <%= link_to (image_tag user.profile.avatar_display(:small), class: 'round border'), profile_path(user.profile) %> 
+                        <h2><%= link_to (user.profile.full_name), profile_path(user.profile) %></h2>
+                    </div>
                 <% end %>
             <% end %>
         </div>
