--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -329,6 +329,7 @@ a {
 
 .card-left {
     width: 100px;
+    margin-right: 10px;
 }
 
 .card-right {
@@ -486,8 +487,33 @@ textarea, input, select {
 }
 
 .round {
+    width: 300px;
+    min-width: 300px;
+    height: 300px;
+    min-height: 300px;
     border-radius: 50%;
+    object-fit: cover;
 }
+
+.round-small {
+    width: 45px;
+    min-width: 45px;
+    height: 45px;
+    min-height: 45px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.round-medium {
+    width: 90px;
+    min-width: 90px;
+    height: 90px;
+    min-height: 90px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+
 
 .border {
     border: 2px solid var(--color-highlight-main);
